2008-08-05  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ThreadInfo.cs,
	  Mono.Debugging.Client/DebuggerSession.cs: Add location field to
	  ThreadInfo. Reset the cached process list when receiving a target
	  event.

2008-07-25  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/StackFrame.cs,
	  Mono.Debugging.Backend/IBacktrace.cs: Added api for getting all
	  locals of a stack frame.

2008-07-22  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakEvent.cs,
	  Mono.Debugging.Client/Catchpoint.cs,
	  Mono.Debugging.Client/Breakpoint.cs: Added copying methods. Added
	  property which allows stopping on a breakpoint after the given hit
	  count.

2008-07-21  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ObjectValue.cs: Added some missing null checks.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/BreakEvent.cs,
	  Mono.Debugging.Client/Catchpoint.cs,
	  Mono.Debugging.Client/Breakpoint.cs, Mono.Debugging.mdp,
	  Makefile.am: Add serialization support to BreakpointStore.

2008-07-16  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/CatchpointEventArgs.cs,
	  Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/BreakEvent.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/TargetEventType.cs,
	  Mono.Debugging.Client/Catchpoint.cs,
	  Mono.Debugging.Client/Breakpoint.cs,
	  Mono.Debugging.Client/BreakEventArgs.cs, Mono.Debugging.mdp,
	  Makefile.am: Implemented support for catchpoints.

2008-07-11  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/BreakpointStore.cs,
	  Mono.Debugging.Client/DebuggerSession.cs,
	  Mono.Debugging.Client/Breakpoint.cs,
	  Mono.Debugging.Backend/IDebuggerSessionFrontend.cs: Added api to
	  support custom breakpoint hit actions.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Debugging.Client/ThreadInfo.cs,